tests/specs/run/compiler_options_paths_execution/error.ts
import { something } from "@lib/nonexistent";

console.log(something);
